Gtk3: Fix wrong filename of scrollbar
`(gtk3-demo:5797): Gtk-WARNING **: Error loading image
'file:///usr/share/themes/Breeze/gtk-3.0/assets/scrollbar-slider-
overlay-horizontal.png': Error opening file: No such file or directory`

the image file in assets name `scrollbar-slider-horizontal-overlay.png`
but in css file was `scrollbar-slider-overlay-horizontal.png`.

REVIEW: 127323
REVIEW: 126970
BUG: 356395

--- a/Breeze-dark-gtk/gtk-3.0/gtk.css
+++ b/Breeze-dark-gtk/gtk-3.0/gtk.css
@@ -2251,7 +2251,7 @@ column-header .titlebar .button.titlebutton,
       border-style: solid;
       border-color: transparent; }
     .scrollbar.overlay-indicator:not(.dragging):not(.hovering).horizontal .slider {
-      border-image: -gtk-scaled(url("assets/scrollbar-slider-overlay-horizontal-dark.png"), url("assets/scrollbar-slider-overlay-horizontal-dark@2.png")) 4 6 4 6/4px 6px 4px 6px stretch;
+      border-image: -gtk-scaled(url("assets/scrollbar-slider-horizontal-overlay-dark.png"), url("assets/scrollbar-slider-horizontal-overlay-dark@2.png")) 4 6 4 6/4px 6px 4px 6px stretch;
       border-radius: 0;
       border-width: 4px 6px 4px 6px;
       border-style: solid;
